--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,6 @@ span.backtohome:hover {
 }
 
 /* BANNER */ 
-
 .banner {
   position: relative;
   display: flex;
@@ -104,7 +103,6 @@ span.backtohome:hover {
   background-color: rgba(0, 0, 0, 0.4);
   overflow-wrap: break-word;
 }
-
 .learnmore {
   top: 91%;
   color: whitesmoke;
@@ -117,6 +115,7 @@ span.backtohome:hover {
 }
 .learnmore h2{
   font-weight:lighter;
+  font-size: 2.2vw;;
 }
 
 
@@ -128,7 +127,6 @@ span.backtohome:hover {
   height: auto;
   position: relative;
 }
-
 .grid-nav ul {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -138,14 +136,12 @@ span.backtohome:hover {
   margin: 0;
   gap: 1px;
 }
-
 .grid-nav li {
   position: relative;
   width: 100%;
   padding: 0;
   margin: 0;
 }
-
 .grid-nav li a {
   display: block;
   width: 100%;
@@ -157,21 +153,19 @@ span.backtohome:hover {
   background-size: cover;
   background-position: center;
 }
-
 .grid-nav li span {
   background-color: rgb(0, 0, 0, 0.8);
   display: block;
   height: 100%;
   text-align: center;
-  font-size: 1.7em;
+  font-size: 2vw;
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   bottom: 0;
-  padding-top: 40px;
+  padding-top: 3vh;
 }
-
 .grid-nav li span:hover {
   background-color: rgba(0, 0, 0, 0.3);
   transition: background-color 0.4s linear;
@@ -189,14 +183,12 @@ span.backtohome:hover {
 .active a span {
   background-color: rgba(0, 0, 0, 0.4);
 }
-
 .grid-nav li:nth-child(1) a { background-image: url(stress.jpg);}
 .grid-nav li:nth-child(2) a { background-image: url(img3.jpg); }
 .grid-nav li:nth-child(3) a { background-image: url(img4.jpg); }
 .grid-nav li:nth-child(4) a { background-image: url(img8.jpg); }
 .grid-nav li:nth-child(5) a { background-image: url(resources.jpg); }
 .grid-nav li:nth-child(6) a { background-image: url(img2.jpg); }
-
 .grid-nav img{
   width:130%;
   height: 100%;
@@ -205,11 +197,9 @@ span.backtohome:hover {
 
 
 /* MAIN */
-
 .background{
   position: relative;
 }
-
 .background::before{
   content: "";
   position: absolute;
@@ -221,11 +211,9 @@ span.backtohome:hover {
   opacity: 0.04;
   z-index: -1;
 }
-
 main {
   flex: 1;
 }
-
 section {
   margin-bottom: 30px;
 }
@@ -234,19 +222,11 @@ section {
 .importantText{
   color: red;
 }
-
 h3 { /* heading before text begins */
   display: block;
   text-align: center;
-  padding-top: 40px;
-  font-size:xx-large;
-}
-
-h4{ /* headingas within blocks of text*/
-  display: block;
-  margin-left: 15%;
-  padding-top: 20px;
-  font-size: x-large;
+  padding-top: 4vh;
+  font-size: 2.5vw;
 }
 
 blockquote {
@@ -256,66 +236,80 @@ blockquote {
   padding: 20px; 
   margin: 30px 110px; 
   font-style: italic; 
-  font-size: 1.4em; 
+  font-size: 1.6vw; 
   line-height: 1.5; 
   color: #333; 
 }
-
 .maininfo {
   margin-bottom: 0%;;
   padding-bottom: 10%;
 }
+h4{ /* headingas within blocks of text*/
+  display: block;
+  margin-left: 15%;
+  padding-top: 20px;
+  font-size: 2vw;
+}
+h5{
+  font-size: 1.7vw;
+  display: block;
+  padding-bottom:0;
+  padding-top: 10px;
+}
 
+section h5{
+  margin-left: 15%;
+}
 .maininfo p{
   display: block;
   padding: 10px;
-  font-size: 125%;
+  font-size: 1.6vw;
   margin-left: 15%;
   margin-right: 15%;
   line-height: 1.5em;
 }
 
+/* Unordered List */
 .maininfo ul{
-  padding-top: 20px;
+  padding-top: 2px;
   margin-left: 20%;
   margin-right: 10%;
-  font-size: 120%;
-  padding-bottom: 10px;;
+  font-size: 1.6vw;
+  padding-bottom: 10px;
+  line-height: 1.5em;
 }
-
 .maininfo ul li {
   text-decoration: none;
 }
-
 .maininfo ul li a {
   text-decoration: none;
   color: whitesmoke;
 }
-
 .maininfo ul li a:hover {
   color: rgb(62, 59, 255);
 }
 
+/* Ordered List */
 .maininfo ol{
-  padding-top: 20px;
-  margin-left: 20%;
+  padding-top: 10px;
   margin-right: 10%;
-  font-size: 120%;
-  padding-bottom: 10px;;
+  font-size: 1.6vw;
+  padding-bottom: 5px;;
+  display: block;
+  padding: 5px;
+  margin-left: 15%;
+  margin-right: 15%;
 }
-
 .maininfo ol li {
   text-decoration: none;
-  line-height: 1.5em;
-  padding-top: 10px;
-  font-size: 110%;
+  padding-top: 5px;
+  padding-bottom: 20px;
+  line-height: 1.3em;
 }
-
 .maininfo ol li a {
   text-decoration: none;
   color: whitesmoke;
 }
-
 .maininfo ol li a:hover {
   color: rgb(62, 59, 255);
 }
@@ -343,4 +337,46 @@ footer a:visited {
   color: aliceblue;
 }
 
- 
+/*MEDIUM*/
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .grid-nav ul {
+    grid-auto-rows:minmax(170px,auto);
+}
+}
+/*SMALL*/
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .grid-nav ul {
+    grid-auto-rows:minmax(120px,auto);
+}
+}
+
+/*EXTRA SMALL*/
+@media only screen and (min-width: 220px) and (max-width: 575px) {
+  .grid-nav ul {
+    grid-auto-rows:minmax(100px,auto);
+}
+
+.maininfo{
+  min-width: 50%;
+}
+
+blockquote{
+  min-width: 30%;
+}
+
+.banner {
+  flex-direction: column; /* stack vertically */
+  align-items: center; /* center horizontally */
+}
+.banner {
+  flex-direction: column; /* stack vertically */
+  align-items: center; /* center horizontally */
+}
+
+.bannertext h1{
+  font-size: 3vw;
+}
+.caption {
+  display: none;
+}
+}
